fix(sonar): address medium severity issues across service and test layers
Signed-off-by: cyber-titan <chinmai.vemuri@infosys.com>